<resources>
    <string name="app_name">Rocket-Plan</string>
    <string name="headerTitle">RocketPlan</string>
    <string name="headerSubtitle">by Promind Studios</string>
    <string name="item_overview_title">Overview</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="overview">Overview</string>
    <string name="done">Done</string>
    <string name="help">Help</string>
    <string name="custom">Custom</string>
    <string name="at">at</string>
    <string name="minute_plural">Minutes</string>
    <string name="hour_plural">Hours</string>
    <string name="day_plural">Days</string>
    <string name="week_plural">Weeks</string>
    <string name="month_plural">Months</string>
    <string name="every">Every</string>
    <string name="calendar">Calendar</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="overdue">Overdue</string>
    <string name="time">Time</string>
    <string name="drawer_footer">Developed with passion - promindstudios@gmail.com</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="e_mail">E-Mail</string>
    <string name="sms">SMS</string>
    <string name="information">Information</string>
    <string name="home">Home</string>
    <string name="ok">Ok </string>
    <string name="due">due </string>
    <string name="monday_short">MO</string>
    <string name="tuesday_short">TU</string>
    <string name="wednesday_short">WE</string>
    <string name="thursday_short">TH</string>
    <string name="friday_short">FR</string>
    <string name="saturday_short">SA</string>
    <string name="sunday_short">SU</string>
    <string name="priority">Priority</string>
    <string name="priority_none">No priority</string>
    <string name="priority_normal">Normal priority</string>
    <string name="priority_high">High priority</string>
    <string name="priority_very_high">Very high priority</string>
    <string name="title_tabTask">Tasks</string>
    <string name="title_tabEvent">Events</string>
    <string name="title_tabNote">Notes</string>
    <string name="tab_notes">Notes</string>
    <string name="tab_details">Details</string>
    <string name="tab_key_data">General</string>
    <string name="help_add_category_and_welcome">
        Welcome to Rocket-Plan! \n\n
        Get started and add your first category - Just push the "Plus" Button in the right corner! \n\n
        If you want to edit a category just hold on to it. Happy plans for you my friend! \n\n
        Eric - Promind Studios
    </string>
    <string name="help_add_category">
        No categories?\n\n
        Add one through pushing the "Plus" Button in the right corner!</string>
    <string name="help_add_content_and_welcome">
        Well you getting started! \n\n
        Keep going and add your first content - Tasks, Events or Notes can be added through pushing the "Plus" Button in the right corner! \n\n
        If you want to check or delete any content you can use the swipe function. \n\n
        Anything else should be obvious. If you still have any questions or ideas for improvement just send me an e-mail to promindstudios@gmail.com \n\n
        I also appreciate any rating in the Google Play Store! \n\n
        Cheers \n\n
        Eric - Promind Studios
    </string>
    <string name="help_first_content_title">
        Important information!
    </string>
    <string name="help_first_content">
        Good job, you added your first content! \n\n
            If you want to check a task, event or note JUST SWIPE IT TO THE RIGHT. If you want to delete it SWIPE IT TO THE LEFT.
            It is that easy and all I wanted to say at this point :) Have fun!\n\n
        Cheers \n\n
        Eric - Promind Studios
    </string>
    <string name="category">Category</string>
    <string name="toast_add_category">Before you can add any content you have to create a category</string>
    <string name="alert_dialog_category_title">Category for this</string>
    <string name="category_up">Move up</string>
    <string name="category_down">Move down</string>
    <string name="add_category">Add category</string>
    <string name="reminder_due_date">At due date</string>
    <string name="reminder_one_hour">1 hour before due date</string>
    <string name="reminder_one_day">1 day before due date</string>
    <string name="date_due_at">Due at</string>
    <string name="date_done_at">Done at</string>
    <string name="task">Task</string>
    <string name="tasks">tasks</string>
    <string name="detail_title">Title</string>
    <string name="detail_subtext_title_task">Enter a title...</string>
    <string name="detail_title_deadline">Deadline</string>
    <string name="detail_title_reminder">Reminder</string>
    <string name="detail_title_priority">Priority</string>
    <string name="detail_subtext_date">Date</string>
    <string name="detail_subtext_time">Time</string>
    <string name="detail_subtext_repetition">Repetition</string>
    <string name="detail_subtext_reminder">Choose a reminder</string>
    <string name="detail_subtext_priority">High priority</string>
    <string name="task_due_today">This task is due today</string>
    <string name="task_due_tomorrow">This task is due tomorrow</string>
    <string name="add_task">Add a task..</string>
    <string name="detail_description_empty">Add a description</string>
    <string name="detail_description">Description</string>
    <string name="detail_description_hint">Description</string>
    <string name="detail_image">Image</string>
    <string name="picture_edit">Take a new picture</string>
    <string name="detail_subtask_add">Add a Subtask</string>
    <string name="detail_title_picture">Picture</string>
    <string name="detail_subtext_picture">Add a picture</string>
    <string name="event">Event</string>
    <string name="events">events</string>
    <string name="detail_subtext_title_event">Enter a title for your event...</string>
    <string name="detail_title_date_time">Date and Time</string>
    <string name="detail_subtext_beginning">Choose a beginning</string>
    <string name="detail_subtext_end">Choose an end</string>
    <string name="event_due_today">This event is due today</string>
    <string name="event_due_tomorrow">This event is due tomorrow</string>
    <string name="add_event">Add a event..</string>
    <string name="note">Note</string>
    <string name="notes">Notes</string>
    <string name="detail_subtext_title_note">Enter a title for your note...</string>
    <string name="openDrawer">open</string>
    <string name="closeDrawer">close</string>
    <string name="add_note">Add a note..</string>
    <string name="tab_day">Day</string>
    <string name="tab_week">Week</string>
    <string name="tab_month">Month</string>
    <string name="time_due_today">Due today</string>
    <string name="time_due_today_none">Nothing is due today</string>
    <string name="time_done_today">Done today</string>
    <string name="time_done_today_none">Nothing done today</string>
    <string name="time_due_tomorrow">Due tomorrow</string>
    <string name="time_due_tomorrow_none">Nothing is due tomorrow</string>
    <string name="time_due_this_week">Due this week</string>
    <string name="time_due_this_week_none">Nothing is due this week</string>
    <string name="time_done_this_week">Done this week</string>
    <string name="time_done_this_week_none">Nothing done this week</string>
    <string name="time_due_next_week">Due next week</string>
    <string name="time_due_next_week_none">Nothing is due next week</string>
    <string name="time_due_this_month">Due this month</string>
    <string name="time_due_this_month_none">Nothing is due this month</string>
    <string name="time_done_this_month">Done this month</string>
    <string name="time_done_this_month_none">Nothing done this month</string>
    <string name="time_due_next_month">Due next month</string>
    <string name="time_due_next_month_none">Nothing is due next month</string>
    <string name="title_add_category">Add a Category</string>
    <string name="hint_dialog_add">Enter a name...</string>
    <string name="title_edit_category">Edit Category</string>
    <string name="title_add_subtask">Add a Subtask</string>
    <string name="title_edit_subtask">Edit Subtask</string>
    <string name="choose_color">Choose a color</string>
    <string name="title_about">About Rocket-Plan</string>
    <string name="dialog_about_text">Dear Rocket Planer,\n\n
first of all I am very happy that you have picked this app and are working with it. I will inform you briefly about my plans for this neat project, which I have started in 2015:
\n\nWHAT YOU CAN DO WITH ROCKET-PLAN\n\n
You are able to organize your daily tasks, events and notes – All in one App. You have a choice of useful functions, such as subtasks.
\n\nWHAT YOU WILL BE ABLE TO DO\n\n
-	Set a repitition for your tasks and events\n
-	Choose a location for your events\n
-	Use a clever App-Widget\n
-	Work with a calendar function (Big thing)\n
-	Take videos and record your voice, as part of the description\n
-	Share the content with friends and family, without the need of registration\n\n
I prepared the app for this features and are confident that it will work out all good. You can support me by giving me strong ratings, which will defiantly push this project. If you have any wishes please write me an e-mail to promindstudios@gmail.com
\n\nCheers,\n\n
Eric
</string>
    <string name="show_done">Show done</string>
    <string name="hide_done">Hide done</string>
    <string name="color_category_one">Red</string>
    <string name="color_category_two">Blue</string>
    <string name="color_layout_one">Red</string>
    <string name="color_layout_two">Blue</string>
    <string name="color_layout_three">Teal</string>
    <string name="color_layout_four">Green</string>
    <string name="color_layout_five">Orange</string>
    <string name="color_layout_six">Pink</string>
    <string name="januar_short">JAN</string>
    <string name="february_short">FEB</string>
    <string name="march_short">MAR</string>
    <string name="april_short">APR</string>
    <string name="may_short">MAY</string>
    <string name="june_short">JUN</string>
    <string name="july_short">JUL</string>
    <string name="august_short">AUG</string>
    <string name="september_short">SEP</string>
    <string name="october_short">OCT</string>
    <string name="november_short">NOV</string>
    <string name="december_short">DEC</string>
    <string name="layout_color">Layout color</string>
    <string name="introduction_content_list_subtitle">Tasks, events &amp; notes</string>
    <string name="introduction_content_list_structure">Choose a list</string>
    <string name="introduction_content_list_structure_text">Click and open any content list like your tasks, events or notes.</string>
    <string name="introduction_content_list_add">Add content</string>
    <string name="introduction_content_list_add_text">Click here to add any content, depending on the current type of list.</string>
    <string name="introduction_content_list_delete">Delete</string>
    <string name="introduction_content_list_delete_text">Just swipe the content item to the left, while you hold on to it.</string>
    <string name="introduction_content_list_check">Check off content</string>
    <string name="introduction_content_list_check_text">Just swipe the content item to the right. It will be stored in a seperate list with done content.</string>
    <string name="introduction_content_list_quick_add">Quick add</string>
    <string name="introduction_content_list_quick_add_text">Click here to enter a name for any new content and create it through clicking on the arrow on the right.
        In the case of tasks and events you can also add a date through clicking on the crossed calendar icon.</string>
</resources>