<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="7">

            <!-- Row One -->

            <LinearLayout
                style="@style/linear_layout_horizontal_calendar_day">

                <TextView
                    android:id="@+id/tvMonday"
                    style="@style/text_view_week_day"
                    android:text="@string/monday_short"/>

                <TextView
                    android:id="@+id/tvTuesday"
                    style="@style/text_view_week_day"
                    android:text="@string/tuesday_short"/>

                <TextView
                    android:id="@+id/tvWednesday"
                    style="@style/text_view_week_day"
                    android:text="@string/wednesday_short"/>

                <TextView
                    android:id="@+id/tvThursday"
                    style="@style/text_view_week_day"
                    android:text="@string/thursday_short"/>

                <TextView
                    android:id="@+id/tvFriday"
                    style="@style/text_view_week_day"
                    android:text="@string/friday_short"/>

                <TextView
                    android:id="@+id/tvSaturday"
                    style="@style/text_view_week_day"
                    android:text="@string/saturday_short"/>

                <TextView
                    android:id="@+id/tvSunday"
                    style="@style/text_view_week_day"
                    android:text="@string/sunday_short"/>

            </LinearLayout>

            <!-- Row Two -->

            <android.support.v4.view.ViewPager
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:id="@+id/viewPager">
            </android.support.v4.view.ViewPager>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvCalendar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"></android.support.v7.widget.RecyclerView>


    </LinearLayout>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/fabMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="17dp"
        fab:fab_addButtonColorNormal="@color/white"
        fab:fab_addButtonColorPressed="@color/white_pressed"
        fab:fab_addButtonPlusIconColor="@color/colorSecondaryText"
        fab:fab_labelStyle="@style/fab_labels_style"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="17dp">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/colorPrimary"
            fab:fab_colorNormal="@color/colorWhite"
            fab:fab_colorPressed="@color/white_pressed"
            fab:fab_icon="@drawable/ic_task_24dp"
            fab:fab_title="@string/task" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/colorPrimary"
            fab:fab_colorNormal="@color/white"
            fab:fab_colorPressed="@color/white_pressed"
            fab:fab_icon="@drawable/ic_event_24dp"
            fab:fab_title="@string/event" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/colorPrimary"
            fab:fab_colorNormal="@color/white"
            fab:fab_colorPressed="@color/white_pressed"
            fab:fab_icon="@drawable/ic_note_24dp"
            fab:fab_title="@string/note" />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</RelativeLayout>