<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:tabIndicatorColor="@color/colorWhite"
        app:tabSelectedTextColor="@color/colorWhite"
        app:tabTextColor="@color/colorWhite"/>

    <kalender.notes.calendar.notepad.aufgabenplaner.provelopment.rockitplan.NonSwipeableViewPager
        android:id="@+id/viewPager"
        android:layout_below="@id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/fabMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        fab:fab_addButtonColorNormal="@color/white"
        fab:fab_addButtonColorPressed="@color/white_pressed"
        fab:fab_addButtonPlusIconColor="@color/colorSecondaryText"
        fab:fab_labelStyle="@style/fab_labels_style"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/colorWhite"
            fab:fab_title="@string/task"
            app:backgroundTint="@color/colorPrimary"
            fab:fab_icon="@drawable/ic_task_24dp"
            fab:fab_colorPressed="@color/white_pressed"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/white"
            fab:fab_title="@string/event"
            app:backgroundTint="@color/colorPrimary"
            fab:fab_icon="@drawable/ic_event_24dp"
            fab:fab_colorPressed="@color/white_pressed"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/white"
            fab:fab_title="@string/note"
            app:backgroundTint="@color/colorPrimary"
            fab:fab_icon="@drawable/ic_note_24dp"
            fab:fab_colorPressed="@color/white_pressed"/>

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</RelativeLayout>